# Sovereign-of-a-Dying-Hell

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Character Profile Ref.md  Jam-15 Story Plan.md  README.md  Random Thoughts.md  TODO-TouhouFest.md  TODO.md  build.bat  build_asm.bat  build_debug.bat  build_final.bat  build_release.bat  clean.bat  launch.vs.json
adventure-md/: CMakeLists.txt
adventure-md/include/adventure-md/: CharacterAnimator.hpp  CharacterData.hpp  ChoiceSystem.hpp  Constants.hpp  Coroutine.hpp  Debug.hpp  Declare.hpp  DialoguePrinter2.hpp  FadeOps.hpp  FadeOps.inl  FontData.hpp  Game.hpp  GameRoutines.hpp  IntroWorld.hpp  PaletteOps.hpp  PaletteOps.inl  SFXManager.hpp  Saves.hpp  Scene.hpp  SceneDefines.hpp  Script.hpp  SpriteManager.hpp  TileData.hpp  TileOps.hpp  TitleWorld.hpp  TypeSafeID.hpp  VNWorld.hpp  Version.hpp  VoteMode.hpp  Worlds.hpp
adventure-md/res/: fonts.res  vn.res  voting.res
adventure-md/res/src/: demo_shape.psd  frame.psd  generate tileset.txt  title.psd
adventure-md/res/src/hisami/: hisami timings and notes.txt
adventure-md/res/src/suika/: palette.act  suika timings and notes.txt
adventure-md/res/src/yuugi/: palette.act
adventure-md/res/src/yuuma/: palette.act  yuuma timings and notes.txt
adventure-md/src/: CharacterAnimator.cpp  ChoiceSystem.cpp  DialoguePrinter2.cpp  FontData.cpp  Game.cpp  IntroWorld.cpp  SFXManager.cpp  SpriteManager.cpp  TitleWorld.cpp  VNWorld.cpp  Version.cpp  VoteMode.cpp
altres/: res_sfx.res  res_spr.res
altsrc/BuryYourGays/: BuryYourGays_Chara.hpp  BuryYourGays_Scenes.cpp  BuryYourGays_Scenes.hpp  BuryYourGays_Script.cpp  BuryYourGays_Script.hpp
altsrc/TestZanmu/: TestZanmu_Chara.hpp  TestZanmu_Scenes.cpp  TestZanmu_Scenes.hpp  TestZanmu_Script.hpp
distribute_src/emu/: rungame.bat.in  rungame.sh.in
distribute_src/web/: index.html.in
game/: CMakeLists.txt
game/res/: intro.res  res_bg.res  res_fonts.res  res_vn.res  res_voting.res
game/res/Jam15/: chara.res  res_bg.h  res_bg.res  res_chara.h  res_chara.res  res_music.h  res_music.res  res_sfx.h  res_sfx.res  res_spr.h  res_spr.res
game/res/Jam15/music/: faron study.vgm  lost emotion.vgm
game/res/music/: hallowbean_nature.vgm
game/res/src/: animal_realm.psd  fonts.psd  md palette.psd  name_font.psd  title pal.act  title.psd
game/res/src/hisami/: palette.act
game/res/src/suika/: palette.act
game/res/src/voting/: allnums.psd  barconers.psd  barmiddle.psd  notes.txt  palette_cursor.act  palette_fromInitialCol.act  palette_to.act  votingmockup.psd  votingpalette.psd
game/res/src/voting/sillhouettes/: palette.act
game/res/src/yuugi/: palette.act  yuugi timings and notes.txt
game/res/src/zanmu/: palette.act  palette_small.act
game/src/: CharacterAnimator.cpp  CharacterData.hpp  ChoiceSystem.cpp  ChoiceSystem.hpp  Constants.hpp  Coroutine.hpp  Debug.hpp  Declare.hpp  DialoguePrinter2.cpp  DialoguePrinter2.hpp  FadeOps.inl  FontData.cpp  FontData.hpp  Game.cpp  Game.hpp  GameRoutines.hpp  IntroWorld.cpp  IntroWorld.hpp  PaletteOps.hpp  SFXManager.cpp  SFXManager.hpp  Scene.hpp  SceneDefines.hpp  Script.hpp  SpriteManager.cpp  SpriteManager.hpp  TileData.hpp  TileOps.hpp  TitleWorld.cpp  TypeSafeID.hpp  VNWorld.cpp  VNWorld.hpp  Version.cpp  VoteMode.cpp  VoteMode.hpp  Worlds.hpp  main.cpp
game/src/Jam15/: Jam-TODO.md  Jam15_Chara.hpp  Jam15_Scenes.cpp  Jam15_Scenes.hpp  Jam15_Script.cpp  Jam15_Script.hpp
game/src/TestZanmu/: TestZanmu_Scenes.hpp  TestZanmu_Script.hpp
game/src/boot/: rom_head.c
games/proof-of-concept/res/: frame.psd  res_bg.res  res_chara.res  res_fonts.res  res_music.res
games/proof-of-concept/res/bg/: logo.psd
games/proof-of-concept/res/fonts/: fonts.psd  intro_font.psd  name_font.psd
games/proof-of-concept/res/music/: hallowbean_nature.vgm  spacey.vgm
games/proof-of-concept/res/src/: fonts.psd  miscellenaeous_sprites.psd
games/proof-of-concept/src/: BuryYourGays_Chara.hpp  BuryYourGays_Scenes.cpp  BuryYourGays_Scenes.hpp  BuryYourGays_Script.cpp  BuryYourGays_Script.hpp  CharacterAnimator.cpp  CharacterAnimator.hpp  CharacterData.cpp  CharacterData.hpp  ChoiceSystem.cpp  ChoiceSystem.hpp  Constants.hpp  Coro.hpp  Coroutine.hpp  Debug.hpp  Declare.hpp  DialoguePrinter.cpp  DialoguePrinter.hpp  DialoguePrinter2.cpp  DialoguePrinter2.hpp  FadeOps.cpp  FadeOps.hpp  FontData.cpp  FontData.hpp  Game.cpp  Game.hpp  GameRoutines.hpp  GameWorld.cpp  IntroWorld.cpp  PaletteOps.hpp  PaletteOps.inl  SFXManager.cpp  SFXManager.hpp  Scene.cpp  Scene.hpp  SceneDefines.hpp  Script.hpp  SpriteManager.cpp  SpriteManager.hpp  StringLiteral.hpp  (+9 more)
games/proof-of-concept/src/BuryYourGays/: BuryYourGays_Scenes.cpp  BuryYourGays_Script.cpp  BuryYourGays_Script.hpp
games/proof-of-concept/src/TestZanmu/: TestZanmu_Chara.hpp  TestZanmu_Scenes.cpp  TestZanmu_Script.cpp  TestZanmu_Script.hpp
games/proof-of-concept/src/boot/: rom_head.c
res/: bg.res  music.res
res/music/: council.vgm  voting.vgm
src/: Jam-TODO.md  Jam15_Chara.hpp  Jam15_Scenes.cpp  Jam15_Scenes.hpp  Jam15_Script.cpp  Jam15_Script.hpp  main.cpp
